--- a/html-intro_answers/activity1.html
+++ b/html-intro_answers/activity1.html
@@ -15,6 +15,7 @@ at this link " "
             - <header>
             - <h1>
 -->
+<!-- 2. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,11 +29,31 @@ at this link " "
         Now they must collect all the infinity stones to right their wrongs.
     </p>
     <h2>The Main Characters:</h2>
-    <p>Iron Man
-        He is ir
+    <p>Iron Man  
+        He is the main hero of this movie. At first, he was not going to be part of the team, but in the end, 
+        he sacrificed his life for everyone to live.  
     </p>
-    <p>Captain America</p>
-    <p>Thor</p>
     
+    <p>Captain America  
+        He is the leader of the Avengers. A man out of time, he always stands for what is right.
+         In the final battle, he proved himself worthy by wielding Mjolnir and leading the fight against Thanos.  
+    </p>
+    
+    <p>Thor  
+        The God of Thunder, Thor is one of the strongest Avengers. Though he faced personal struggles, 
+        he found his strength again and fought alongside his friends to save the universe.  
+    </p>
+
+    <h3>Plot</h3>  
+    <p>The story follows a group of heroes as they unite to stop a powerful enemy threatening the universe. 
+    Filled with action, sacrifice, and emotional moments, the movie delivers an unforgettable experience.</p>  
+
+    <h4>Setting</h4>  
+    <p>The movie takes place across various locations, from Earth to deep space. Key battles happen in New York, Wakanda,
+     and the final showdown in an apocalyptic battleground.</p>  
+
+    <h5>Personal Thought</h5>  
+    <p>The movie is my favorite of all time it was the best</p>  
+
 </body>
 </html>
