--- a/html_intermediate/practice_set1.html
+++ b/html_intermediate/practice_set1.html
@@ -32,7 +32,9 @@
             font-weight: bold;
         }
 
-        input[type="text"],
+        input[type="last_name"],
+        input[type="first_name"],
+        input[type="middle_name"],
         input[type="email"],
         input[type="password"] {
             width: 100%;
@@ -62,19 +64,29 @@
         <h1>Sign Up</h1>
         <form action="#" method="post">
             <div class="form-group">
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname">
+                <label for="last_name">Last Name:</label>
+                <input type="last_name" id="last_name" name="last_name" required>
+            </div>
+            <div class="form-group">
+                <label for="first_name">First Name:</label>
+                <input type="first_name" id="first_name" name="first_name"required>
+            </div>
+            <div class="form-group">
+                <label for="middle_name">Middle Name:</label>
+                <input type="middle_name" id="middle_name" name="middle_name"required>
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email"required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}" 
+                required>
                 <small>Password must contain at least 8 characters, including one uppercase letter, one lowercase letter, one number, and one special character (!@#$%^&*).</small>
             </div>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Register</button>
         </form>
     </div>
 </body>
