--- a/html_intermediate/practiceset3.html
+++ b/html_intermediate/practiceset3.html
@@ -104,5 +104,21 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    <script>
+        document.getElementById("registration-form").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            const formData = {
+                last_name: document.getElementById("last_name").value,
+                first_name: document.getElementById("first_name").value,
+                middle_name: document.getElementById("middle_name").value,
+                birthdate: document.getElementById("birthdate").value,
+                department: document.getElementById("department").value,
+                office: document.getElementById("office").value
+            };
+
+            console.log("Form Data:", formData);
+        });
+    </script>
 </body>
 </html>
