fix some mistakes

--- a/html-intro_answers/activity2.html
+++ b/html-intro_answers/activity2.html
@@ -27,6 +27,7 @@
     <title>My Links</title>
 </head>
 <body>
+    <h1>My links</h1>
     <footer>
         <ul>
             <li><a href="mailto:joshisip49@gmail.com">Email</a></li></li>
