--- a/html-intro_answers/activity4.html
+++ b/html-intro_answers/activity4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Filipinos with Traditional Dress</h2>
-    <img src="https://github.com/kjvmartinez/breadcrumbs.github.io/blob/7db305989afa422b8a1c4edca3aa80618363cb16/img/output04.jpg" 
+    <img src="filipinos.JPG" 
          alt="Filipinos in Traditional Dress" 
          width="800">
 </body>
